fix(css): error-tooltip aligned center

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -22,9 +22,9 @@
   }
 
   .error-tooltip {
-    @apply py-1 w-40 absolute left-2/4 transform -translate-x-2/4
-          text-white bg-red opacity-0 group-hover:opacity-100
+    @apply py-1 w-40 absolute left-2/4 text-white bg-red opacity-0 group-hover:opacity-100
             text-sm font-medium text-center transition-all duration-300;
+    transform: translateX(calc(-50% + 8px));
     bottom: calc(100% + 12px);
     border-radius: 4px;
   }
